:bug: safari gap 지원하지않는 속성 수정

--- a/public/css/scss/_calendarDetail.scss
+++ b/public/css/scss/_calendarDetail.scss
@@ -13,7 +13,6 @@
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
-      gap: 10px;
       margin-bottom: 10px;
       li {
         width: calc(50% - 5px);
@@ -24,6 +23,10 @@
         }
         &:nth-child(2n-1) {
           padding-right: 40px;
+          margin-right: 10px;
+          @include respond-to("lg") {
+            margin-right: 0;
+          }
         }
         &:nth-child(2n) {
           padding-left: 40px;
@@ -32,6 +35,7 @@
       li.fullWidth {
         width: 100%;
         padding: 0;
+        margin-right: 0;
       }
       label {
         flex-wrap: nowrap;
