--- a/public/css/scss/_form.scss
+++ b/public/css/scss/_form.scss
@@ -3,18 +3,19 @@ form.type {
     ul {
       display: flex;
       flex-direction: column;
-      gap: 3px;
       margin: 0;
       padding: 0;
-      @include respond-to("sm") {
-        gap: 13px;
+      li {
+        margin-bottom: 3px;
+        @include respond-to("sm") {
+          margin-bottom: 13px;
+        }
       }
     }
     label {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      gap: 8px;
       span {
         display: inline-block;
         width: 100px;
@@ -26,6 +27,7 @@ form.type {
         letter-spacing: -0.6px;
         text-align: left;
         color: $black;
+        margin: 8px 8px 8px 0;
       }
       input,
       textarea {
@@ -61,7 +63,6 @@ form.type {
       }
       .phone {
         display: flex;
-        gap: 3px;
         max-width: 400px;
         width: 100%;
       }
@@ -69,8 +70,12 @@ form.type {
         max-width: 227px;
         width: 100%;
       }
-      .phone .select select {
-        max-width: 170px;
+      .phone .select {
+        margin-right: 3px;
+        select {
+          max-width: 190px;
+          height: 100%;
+        }
       }
       .select {
         position: relative;
@@ -96,8 +101,6 @@ form.type {
       display: flex;
       align-items: center;
       cursor: pointer;
-      gap: 10px;
-
       .checkbox {
         width: 32px;
         height: 32px;
@@ -106,6 +109,7 @@ form.type {
         border-radius: 4px;
         border: solid 1px $very-light-pink;
         position: relative;
+        margin-right: 10px;
         &:after {
           content: "";
           width: 9px;
@@ -136,7 +140,6 @@ form.type {
       display: flex;
       .help {
         display: flex;
-        gap: 12px;
         align-items: center;
         cursor: pointer;
 
@@ -149,6 +152,7 @@ form.type {
           letter-spacing: -0.48px;
           text-align: left;
           color: $black;
+          margin-right: 12px;
         }
       }
     }
@@ -157,13 +161,14 @@ form.type {
     .numberPush {
       display: flex;
       flex-wrap: wrap;
-      gap: 3px;
       margin-bottom: 19px;
 
       button[type="submit"] {
         padding: 17px 38px;
+        margin-bottom: 0;
         @include respond-to("sm") {
           width: 100%;
+          margin-bottom: 33px;
         }
       }
 
@@ -171,8 +176,11 @@ form.type {
         position: relative;
         width: 100%;
         max-width: 398px;
+        margin-right: 3px;
         @include respond-to("sm") {
           max-width: none;
+          margin-right: 0;
+          margin-bottom: 10px;
         }
       }
 
@@ -197,8 +205,10 @@ form.type {
     .inputWrap {
       display: flex;
       flex-direction: column;
-      gap: 3px;
       margin-bottom: 10px;
+      label:first-child {
+        margin-bottom: 3px;
+      }
     }
     button[type="submit"] {
       padding: 17px 38px;
